# emergent

./: .gitignore  .pytest_import_diagnostics.py  DEV_TESTING.md  INFRASTRUCTURE_SUMMARY.md  README.md  RUNNING.md  SHIP_ABM_TODO.md  WIND_CURRENT_FIXES.md  WIND_CURRENT_QUICKSTART.md  WIND_CURRENT_TECHNICAL.md  conftest.py  environment.yml  gl_diag_output_fbo.txt  gl_diag_output_offscreen.txt  pid_trace_rosario_scaled.csv  pid_trace_two_agent_qc.csv  profile_after.pstats  pyproject.toml  requirements.txt  run_hecras_log.txt  setup.py  sweep_pid_summary.csv  test_quick.py  tmp_run_init.py  tmp_run_output.txt  trace_kp0.2_ki0.01_kd0.1.csv  trace_kp0.2_ki0.01_kd0.5.csv  trace_kp0.2_ki0.05_kd0.1.csv  trace_kp0.2_ki0.05_kd0.5.csv  trace_kp0.2_ki0.0_kd0.0.csv  trace_kp0.2_ki0.0_kd0.1.csv  trace_kp0.2_ki0.0_kd0.5.csv  trace_kp0.5_ki0.01_kd0.1.csv  trace_kp0.5_ki0.01_kd0.5.csv  trace_kp0.5_ki0.05_kd0.1.csv  trace_kp0.5_ki0.05_kd0.5.csv  trace_kp0.5_ki0.0_kd0.1.csv  trace_kp0.5_ki0.0_kd0.5.csv  trace_kp1.0_ki0.01_kd0.1.csv  trace_kp1.0_ki0.01_kd0.5.csv  (+4 more)
.spyproject/: workspace.ini
data/: pid_optimize_Nushagak.csv  pid_optimize_Nushagak_v2.xlsx
docs/: ARCHITECTURE.md  BIOLOGICAL_SCHOOLING_METRICS.md  GL_SETUP.md  HECRAS_HDF5_STRUCTURE.md  HECRAS_HELPERS.md  HECRAS_usage.md  MODULE_INDEX.json  PID_tuning_readme.md  RL_TRAINING_GUIDE.md  USER_CONFIG_OPTIONS.md  abm with schooling for fish passage.docx  environmental_data_testing.md  rl_gui_design.md  rl_gui_reference.md  session_report_2025-12-09.md  session_report_2025-12-11.md
emergent/: __init__.py  emergent.py  shipABM_Complexity_V13.py  ship_SOA.py  sockeye.py  sockeye_SoA.py  sockeye_dynamic_environment.py  sockeye_multiprocessing.py
logs/: colregs_runtime_debug.csv  pid_trace_forced.csv
outputs/: centerline_demo.dbf  centerline_demo.shp  centerline_demo.shx
reports/: architecture_proposal_2025-12-09.md
scenarios/: README_DALI.md  dali_bridge_collision_config.json  dali_test_quick.json
scripts/: Multi_Model_Summary.py  PID_interpolator.py  Sockeye_Summarize_F.py  animation_method_experiments.py  bench_metrics.py  check_ci.ps1  check_docstrings.py  check_ngofs2.py  check_sscofs_grid.py  compute_fsk_abutments.py  convert_wiki_coords.py  debug_rudder_test.py  diag_enc_traj_bounds.py  diagnose_spatial_ops.py  drag.py  efficient_search_rasterio.py  explore_s3_structure.py  export_enc_preview.py  extract_coords_from_pdf.py  fatigue.py  find_unbalanced_quotes.py  find_unbalanced_quotes2.py  inspect_dali_start_positions.py  kriging_experiments.py  parameter_sweep_pid.py  pid_optimize_production.py  pid_population.py  pid_solution.py  plot_dali_trajectories.py  plot_enc_debug.py  probe_current.py  probe_wind.py  (+74 more)
(+639 files in other folders)
