# pyproject.toml  – minimal, PEP 621-style

[build-system]
requires      = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "emergent"
version         = "0.0.1"
description     = "Emergent – agent-based modelling framework for spatial emergent phenomena (ships, fish, …)"
authors         = [{ name="Kevin Nebiolo" }]
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    # core scientific stack
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7",
    "matplotlib>=3.4",

    # geospatial
    "geopandas>=0.9",
    "shapely>=1.7",
    "fiona>=1.8",
    "rasterio>=1.2",
    "affine>=2.4",
    "pyproj",

    # storage / parallel
    "h5py>=3.1",
    "dask[array]>=2021.6",

    # GUI / visualisation
    "PyQt5>=5.15",
    "pyqtgraph>=0.12",

    # misc utilities
    "networkx>=2.6",
    "requests>=2.25",
    "xarray",
    "fsspec",
    "s3fs",
    "netcdf4",
    "h5netcdf"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
