# pyproject.toml  – minimal, PEP 621-style

[build-system]
requires      = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "emergent"
version         = "0.0.1"
description     = "Emergent – agent-based modelling framework for spatial emergent phenomena (ships, fish, …)"
authors         = [{ name="Kevin Nebiolo" }]
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    # core scientific stack
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7",
    "matplotlib>=3.4",

    # geospatial
    "geopandas>=0.9",
    "shapely>=1.7",
    "fiona>=1.8",
    "rasterio>=1.2",
    "affine>=2.4",
    "pyproj>=3.0",

    # storage / parallel
    "h5py>=3.1",
    "dask[array]>=2021.6",

    # GUI / visualisation
    "PyQt5>=5.15",
    "pyqtgraph>=0.12",

    # Ocean/atmospheric data access (AWS S3)
    "xarray>=0.19",
    "fsspec>=2021.8",
    "s3fs>=2021.8",
    "netcdf4>=1.5",
    "h5netcdf>=0.11",
    "cfgrib>=0.9.10",
    "aiobotocore>=2.0",
    "aiohttp>=3.7",

    # OpenGL bindings
    "PyOpenGL>=23.0",
    "PyOpenGL_accelerate>=23.0",

    # misc utilities
    "networkx>=2.6",
    "requests>=2.25"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
